Added export button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
   <div id="model-info">Vertex Count: 0 | Triangle Count: 0</div>
+  <a id="downloadLink" style="display:none"></a>
 </body>
 
 </html>
