--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script type="module" src="/src/main.js"></script>
   <div id="model-info">Vertex Count: 0 | Triangle Count: 0</div>
   <a id="downloadLink" style="display:none"></a>
+  <input type="file" id="fileInput" accept=".json" style="display: none;" />
 </body>
 
 </html>
